--- a/Workbit.App/Views/_ViewImports.cshtml
+++ b/Workbit.App/Views/_ViewImports.cshtml
@@ -9,6 +9,7 @@
 @using Workbit.Core.Models.Department;
 @using Workbit.Core.Models.Manager;
 @using Workbit.Core.Models.Payment;
+@using Workbit.Core.Models.Admin;
 @using Workbit.Core.Models.Employee;
 @using Workbit.Core.Models.Job;
 @using Workbit.App.Extensions
