--- a/Workbit.App/Views/_ViewImports.cshtml
+++ b/Workbit.App/Views/_ViewImports.cshtml
@@ -2,7 +2,7 @@
 @using Workbit.App.Models
 @using Workbit.Infrastructure.Database.Entities;
 @using Workbit.Infrastructure.Database.Entities.Account;
-@using Workbit.Core.Models.Account;
+@using Workbit.Core.Models.User;
 @using Workbit.Core.Models.Ceo;
 @using Workbit.Core.Models.Company;
 @using Workbit.Core.Models.Attendance;
