--- a/Workbit.App/Areas/Manager/Views/Employee/TeamEmployees.cshtml
+++ b/Workbit.App/Areas/Manager/Views/Employee/TeamEmployees.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Workbit.Core.Models.Employee.EmployeeSummaryDto>
+﻿@model IEnumerable<EmployeeSummaryDto>
 @{
     ViewData["Title"] = "My Team";
 }
@@ -19,7 +19,6 @@
             font-size: 2rem;
         }
 
-    /* Add Employee Button */
     .btn-add-employee {
         position: absolute;
         top: 2.5rem;
@@ -63,6 +62,7 @@
             color: #fff;
             font-weight: 600;
             font-size: 1.1rem;
+            cursor: pointer;
         }
 
         .team-table tr:nth-child(even) {
@@ -114,6 +114,10 @@
         font-size: 1rem;
         padding: 0.8rem;
     }
+
+    .dataTables_length {
+        margin-bottom: 1.2rem !important; /* Adds space below the dropdown */
+    }
 </style>
 
 <div class="team-wrapper">
@@ -139,7 +143,7 @@
     }
     else
     {
-        <table class="team-table">
+        <table class="team-table display" id="teamTable">
             <thead>
                 <tr>
                     <th>Name</th>
@@ -150,7 +154,7 @@
                 @foreach (var employee in Model)
                 {
                     <tr>
-                        <td>@employee.FullName</td>
+                        <td><strong>@employee.FullName</strong></td>
                         <td style="text-align: center;">
                             <a asp-controller="Manager" asp-action="EmployeeDetailsForManager" asp-route-id="@employee.Id"
                                class="btn action-btn btn-view">
@@ -170,3 +174,23 @@
         </table>
     }
 </div>
+
+@section Scripts {
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+    <link href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" rel="stylesheet" />
+
+    <script>
+        $(document).ready(function () {
+            $('#teamTable').DataTable({
+                pageLength: 10,
+                order: [[0, "asc"]], // Sort by Name by default
+                searching: false, // Hide built-in search (add your own if you want)
+                columnDefs: [
+                    { orderable: false, targets: 1 } // disables sorting for Actions column
+                ]
+            });
+        });
+    </script>
+}
+
