--- a/Workbit.App/Areas/Manager/Views/_ViewImports.cshtml
+++ b/Workbit.App/Areas/Manager/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Workbit
 @using Workbit.Core.Models.Manager;
+@using Workbit.Core.Models.Employee;
 @using static Workbit.Common.DataConstants.Constants;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
